# chat-with-sql-demo

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
