[tool.poetry]
name = "chat-with-sql-demo"
version = "0.1.0"
description = ""
authors = ["Christine"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
langchain = "^0.1.2"
llama-cpp-python = "^0.2.32"
huggingface-hub = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
